# Gravity_Shmavity

./: .gitignore  README.md  cli.py  pyproject.toml  verification_runner.py
data/: DATASET_README.md  DATA_NOTE.md  REVERSAL_CANDIDATES.md  REVERSAL_DATA_READINESS.md  REVERSAL_DATA_SEARCH.md  REVERSAL_TARGET_SPEC.md
data/metadata/: codata_recommended.json  nature2018_li.json  nature2018_li_source_data.json  nsr_compilation.json
data/metadata/reversal_candidates/: gershteyn2002.json  schlamminger2015.json
data/staged/: g_configs_minimal.csv  g_configs_nature2018_granular.csv  g_measurements_minimal.csv  nature2018_li_aaf_individual.csv  nature2018_li_historical_compilation.csv  nature2018_li_period_timeseries.csv  nature2018_li_tos_individual.csv  reversal_pred1.csv  reversal_pred1_pairs.csv
data/staged/nature2018_li/: extdata_fig4_temp_accel.csv  extdata_fig5_period_nearfar.csv  fig2_a_tos_period_series1.csv  fig2_b_tos_period_series2.csv  fig2_c_tos_g_by_fiber.csv  fig2_f_aaf_g_by_run.csv  fig3_c_historical_g.csv
scripts/: build_reversal_pairs.py  extract_preavg_tables.py  inspect_xlsx.py  nature2018_m3_indication.py  nature2018_method_nuisance_test.py  nature2018_permutation_test.py  nature2018_preavg_pred1.py  reversal_data_check.py
src/m3_squared_tests/: __init__.py  cli.py  constants.py
src/m3_squared_tests/io/: load_staged.py  (+1 more)
src/mverse_ladder/: __init__.py
tests/: test_calibration.py  test_cli_smoke.py  test_constants.py  test_determinism.py  test_ladder.py  test_model_selection.py  test_pred1_logic.py  test_pred2_regression.py  test_pred3_null.py
(+38 files in other folders)
