[project]
name = "mverse-ladder"
version = "0.1.0"
description = "Layered substrate ladder inference toolkit"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pandas",
  "pydantic>=2.0",
  "typer>=0.9",
]

[project.optional-dependencies]
full = ["dynesty", "emcee"]

[project.scripts]
ladder = "cli:app"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
