[project]
name = "m3-squared-tests"
version = "0.1.0"
description = "M3 squared-coupling prediction tests and residual fit harness"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pandas",
  "pydantic>=2.0",
  "typer>=0.9",
]

[project.scripts]
m3test = "m3_squared_tests.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
